<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="data"
            type="com.example.myapplication.ui.gallery.mqtt.mqtt_waveform.FragmentMqttWaveformViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.gallery.mqtt.mqtt_waveform.Fragment_mqtt_waveform">


        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/linechart"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintBottom_toTopOf="@+id/guideline29"
            app:layout_constraintEnd_toStartOf="@+id/guideline28"
            app:layout_constraintStart_toStartOf="@+id/guideline27"
            app:layout_constraintTop_toTopOf="@+id/guideline31" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05109489" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boxingtu_tishi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline28"
            app:layout_constraintStart_toStartOf="@+id/guideline27"
            app:layout_constraintTop_toTopOf="@+id/guideline29" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huizhiboxingtu"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/linechart"
            app:layout_constraintEnd_toStartOf="@+id/guideline28"
            app:layout_constraintStart_toStartOf="@+id/guideline27"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/boutt_jr_1"
            android:text="@string/qingkong"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline31"
            app:layout_constraintEnd_toStartOf="@+id/guideline28"
            app:layout_constraintTop_toTopOf="@+id/guideline34" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/kaisjieshou"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline31"
            app:layout_constraintStart_toStartOf="@+id/guideline27"
            app:layout_constraintTop_toTopOf="@+id/guideline34" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>